@@ -69,7 +69,7 @@ plan tests => 0 + 9
                 + 9  # mr with large bases
                 + scalar @small_lucas_trials
               # + $num_large_pseudoprime_tests
-                + 1*$extra  # Arnault 1994 big Carmichael number
+                + 6*$extra  # Large Carmichael numbers
                 + 0;
 
 eval { is_strong_pseudoprime(2047); };
@@ -156,16 +156,17 @@ for my $n (@small_lucas_trials) {
 if ($extra) {
   my $n;
   # Zhang 2004
-  $n = Math::BigInt->new("9688312712744590973050578123260748216127001625571");
+  $n = "9688312712744590973050578123260748216127001625571";
   is( is_strong_pseudoprime($n, 2..70), 1, "968..571 is spsp(1..70)" );
   is( is_strong_pseudoprime($n, 71),    0, "968..571 is found composite by base 71" );
   # Bleichenbacher
-  $n = Math::BigInt->new("68528663395046912244223605902738356719751082784386681071");
+  $n = "68528663395046912244223605902738356719751082784386681071";
   is( is_strong_pseudoprime($n, 2..100), 1, "685..071 is spsp(1..100)" );
   is( is_strong_pseudoprime($n, 101),    0, "685..071 is found composite by base 101" );
   # Arnault 1994, strong pseudoprime to all bases up to 306
-  my $p1 = Math::BigInt->new("29674495668685510550154174642905332730771991799853043350995075531276838753171770199594238596428121188033664754218345562493168782883");
-  $n = $p1* (313 * ($p1-1) + 1) * (353 * ($p1-1) + 1);
+  #my $p1 = Math::BigInt->new("29674495668685510550154174642905332730771991799853043350995075531276838753171770199594238596428121188033664754218345562493168782883");
+  #$n = $p1* (313 * ($p1-1) + 1) * (353 * ($p1-1) + 1);
+  $n = "2887148238050771212671429597130393991977609459279722700926516024197432303799152733116328983144639225941977803110929349655578418949441740933805615113979999421542416933972905423711002751042080134966731755152859226962916775325475044445856101949404200039904432116776619949629539250452698719329070373564032273701278453899126120309244841494728976885406024976768122077071687938121709811322297802059565867";
   is( is_strong_pseudoprime($n, 2..306), 1, "Arnault-397 Carmichael is spsp(1..306)" );
   is( is_strong_pseudoprime($n, 307), 0, "Arnault-397 Carmichael is found composite by base 307" );
 }
